# symphony-webapp

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/scripts/: attach-walkthrough.sh  linear-state.sh  linear-workpad.sh  open-pr.sh  record-walkthrough.sh  run-tests.sh
.claude/skills/commit/: SKILL.md
.claude/skills/land/: SKILL.md
.claude/skills/pull/: SKILL.md
.claude/skills/push/: SKILL.md
.claude/skills/walkthrough/: SKILL.md
.codex/scripts/: commit-and-push.sh  linear-workpad.sh  run-tests.sh
.codex/skills/commit/: SKILL.md
.codex/skills/pull/: SKILL.md
.codex/skills/push/: SKILL.md
.codex/skills/walkthrough/: SKILL.md
.github/workflows/: ci.yml
apps/backend/: pyproject.toml
apps/backend/backend/: main.py  persistence.py  provider.py
apps/backend/static/: chat.mjs  chat.test.mjs  index.html
apps/backend/tests/: conftest.py  test_main.py
apps/frontend/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/frontend/e2e/: chat-create-delete.spec.ts  chat-helpers.ts  chat.spec.ts  conversation-rename.spec.ts  conversation-search.spec.ts  home.spec.ts  multi-chat-lifecycle.spec.ts  sym45-claude-responses.spec.ts  sym46-streaming.spec.ts
apps/frontend/src/: App.test.tsx  App.tsx  chatApi.ts  chatStream.test.ts  chatStream.ts  chatTypes.ts  index.css  useChatState.ts
apps/frontend/src/components/: ChatComposer.tsx  ChatHistory.tsx  ConversationSidebar.tsx  ThreadHeader.tsx
docs/: chat-app-current-state.md  poem.md  rap.md
